# EasyWork

./: .flutter-plugins-dependencies  .gitignore  AGENTS.MD  EMAIL_AUDIT_REPORT.md  EMAIL_AUDIT_REPORT_V2.md  EMAIL_AUDIT_REPORT_V3.md  EMAIL_AUDIT_REPORT_V4.md  EMAIL_AUDIT_REPORT_V5.md  README.md  README.zh-CN.md  README.zh.md  analysis_options.yaml  build_and_sleep.cmd  create-icons.js  fix.ps1  fix_isidle.py  index.html  l10n.yaml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prototype.html  pubspec.yaml  run_sdkmanager.cmd  screen_off.ps1  tsconfig.app.json  tsconfig.base.json  vite.config.ts
.dart_tool/: package_config.json  package_graph.json
.dart_tool/build_resolvers/: sdk.sum.deps
.dart_tool/dartpad/: web_plugin_registrant.dart
.dart_tool/flutter_build/: dart_plugin_registrant.dart
.workbuddy/memory/: 2026-07-08.md
android/app/: build.gradle.kts
apps/app-accounting/: index.html  package.json  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
apps/app-calendar/: index.html  package.json  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
apps/app-dashboard/: index.html  package.json  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
apps/app-kanban/: index.html  package.json  tsconfig.json  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
apps/app-logs/: index.html  package.json  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
apps/app-mail/: index.html  package.json  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
apps/app-notes/: index.html  package.json  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
apps/app-settings/: index.html  package.json  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
apps/app-sports/: index.html  package.json  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
apps/app-stock/: index.html  package.json  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
apps/main/: index.html  package.json  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js
docs/: CheckRules.md  EasyWork-Design.md  EasyWork-Design2.md  EasyWork-Design3.md  EasyWork-Design4.md  EasyWork-Design5.md  EasyWork-Mail-Design3.md  EasyWork手写设计文档.md  Execution-Plan.md  Phase0-Execution-Plan.md  联系人功能设计.md
docs/Memory/: Memory.06.12.md
docs/plans/: 2026-06-12-contacts-global-module.md  2026-06-12-contacts-management-design.md  2026-06-14-accounting-layout-redesign.md
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/l10n/: app_en.arb  app_localizations.dart  app_localizations_en.dart  app_localizations_zh.dart  app_zh.arb
lib/router/: app_router.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
scripts/: generate-icons.cjs
shared/: package.json  tsconfig.json  tsconfig.tsbuildinfo
shared/src/: index.ts
src/: index.css  main.tsx  routeTree.gen.ts
src-tauri/: .env.example  Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/migrations/supabase/: 001_init_sync_tables.sql
src-tauri/src/: error.rs  lib.rs  log_writer.rs  logging.rs
src-tauri/src/commands/: accounting.rs  autoconfig.rs  calendar.rs  drafts.rs  log.rs  mail.rs  mod.rs  note.rs  notification_handler.rs  settings.rs  sports.rs  stock.rs  system.rs  task.rs
src-tauri/src/db/: mod.rs  ops.rs  schema.rs
src-tauri/src/db/migrations/: V1__initial.sql  V2__indexes.sql  V3__demo_data.sql  V4__stock.sql  V5__app_logs.sql  mod.rs
src-tauri/src/mail/: crypto.rs  imap.rs  mod.rs  models.rs  parser.rs  reconcile.rs  smtp.rs  sync.rs  thread.rs
src-tauri/src/stock/: alert_worker.rs  commands.rs  db.rs  mod.rs
src-tauri/src/sync/: auth.rs  changelog.rs  client.rs  engine.rs  helpers.rs  mod.rs
src/components/: ContactActionMenu.tsx  ContactAutocomplete.tsx  ContactGroupSidebar.tsx  ContactImportDialog.tsx  ContactPickerPanel.tsx  PendingOpsPanel.tsx  (+12 more)
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+360 files in other folders)
