[package]
name = "app"
version = "0.1.0"
description = "EasyWork - Personal Efficiency Tool"
authors = ["Ethan"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[features]
# Default: enable TLS via rustls (works everywhere, no external dependencies).
# With rustls, IMAP/SMTP TLS is handled without OpenSSL, avoiding cross-compile
# headaches for Android and platform-specific OpenSSL quirks.
#
# Optional: "desktop-native-tls" switches IMAP TLS to native-tls (schannel on
# Windows, Security.framework on macOS, OpenSSL on Linux). Enable this only
# if you need the OS trust store for corporate/internal PKI scenarios.
default = ["desktop-native-tls"]

# native-tls with vendored OpenSSL (desktop-only; requires Perl+make for
# cross-compilation to Android)
desktop-native-tls = ["native-tls-vendored", "dep:native-tls", "dep:tokio-native-tls"]
native-tls-vendored = ["native-tls/vendored"]

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-notification = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
rusqlite = { version = "0.32", features = ["bundled", "vtab"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"
async-imap = "0.9"
tokio-rustls = "0.26"
rustls = "0.23"
webpki-roots = "1.0"
# native-tls for all platforms.
# Windows uses schannel, macOS uses Security.framework,
# Linux/Android use OpenSSL (compiled from source via the `vendored` feature,
# see [features] above — same approach as Delta Chat's chatmail/core)
native-tls = { version = "0.2", optional = true }
tokio-native-tls = { version = "0.3", optional = true }
futures = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "builder", "smtp-transport", "hostname"] }
keyring = { version = "3", features = ["windows-native"] }
chrono = { version = "0.4", features = ["serde"] }
aes-gcm = "0.10"
zeroize = "1"
rand = "0.8"
base64 = "0.22"
mailparse = "0.16"
sanitize-filename = "0.6"
open = "5"
fern = "0.7"
sha2 = "0.10"
hex = "0.4"
